2006-08-31  David Blacka  <davidb@fury.blacka.com>

	* Modified jdnssec-signzone to set the ttls of NSEC3 records (so
	far) to the SOA minimum value.

	* Add NSEC3PARAM support for compatibility with the -07 NSEC3
	draft.

2006-05-24  David Blacka  <davidb@verisignlabs.com>

	* Add some error checking for the NSEC3 command line parameters
	for jdnssec-signzone.

	* Update local dnsjava build to 2.0.1.  This also contains a
	change to the NSEC3 rdata format (as per the -06pre NSEC3 draft).
	The change is the addition of a "next hashed owner name" length
	octet.

	* Modified the jdnssec-* shell wrappers to also use the local
	build area version of the jdnssec-tools.jar file.  This allows the
	standard jdnssec-* wrappers to work right from the build area.

	* Add support of the SHA256 algorithm for DS records.  This uses
	the SHA256 class that I obtained from Scott Rose (thanks Scott!).

	* Change the name of the package and jar file to jdnssec-tools
	(from java-dnssec-tools) for consistency.

	* release version 0.7.0.

2006-05-23  David Blacka  <davidb@verisignlabs.com>

	* Add support for algorithm aliases.  This feature is so that the
	user can declare the DNSKEY algorithm x is the same as algorithm 5
	(e.g.).  So far, this only works with straight integer algorithm
	identifiers (no private alg support yet).

	* Fix jdnssec-signzone so that you can specify multiple KSKs on
	the command line.  Apparently, commons-cli actually does handle
	repeating command line options correctly.

2006-05-03  David Blacka  <davidb@verisignlabs.com>

	* Add preliminary implementation of jdnssec-dstool.  This is a
	simple command line tool that takes a DNSKEY record and converts
	it into a DS record (or a DLV record).  Right now, it requires
	that the key is stored in a file ending with '.key'.

	* release version 0.6.0.

2006-03-15  David Blacka  <davidb@verisignlabs.com>

	* Type map changes for NSEC3, corresponding to changes in draft